apps/base/infra-crowdsec/deploy/agent/daemonSet.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: agent
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: crowdsec
      app.kubernetes.io/component: agent
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crowdsec
        app.kubernetes.io/component: agent
    spec:
      securityContext:
        # Run as root to be able to read host logs
        runAsNonRoot: false
        #runAsUser: 65534 # nobody
        #fsGroup: 65534
        #fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
          - 4 # adm group, allows reading host logs
      containers:
      - name: agent
        image: "registry.lan/crowdsec:v1.8.1-debian"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6060
          name: metrics
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 64Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: crowdsec-ca-certs
          mountPath: /etc/ssl/crowdsec
        - name: agent-cert-volume
          mountPath: /etc/ssl/crowdsec/agent
          readOnly: true
        - name: etc-volume
          mountPath: /etc/crowdsec
        - name: data-volume
          mountPath: /var/lib/crowdsec/data
        - name: staging-data-volume
          mountPath: /staging/var/lib/crowdsec/data
        - name: varlog
          mountPath: /var/log
          readOnly: true
        - name: tmp-volume
          mountPath: /tmp
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: crowdsec-ca-certs
        secret:
          secretName: crowdsec-ca-certs
      - name: agent-cert-volume
        hostPath:
          path: /etc/ssl/crowdsec_host/agent
      - name: tmp-volume
        emptyDir: {}
      - name: etc-volume
        emptyDir: {}
      - name: data-volume
        emptyDir: {}
      - name: staging-data-volume
        emptyDir: {}
      - name: varlog
        hostPath:
          path: /var/log
      imagePullSecrets:
      - name: docker-config
