apps/base/infra-crowdsec/deploy/agent/service-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: crowdsec-agent-metrics
  labels:
    crowdsec-role: agent
    prometheus-target: crowdsec-agent
spec:
  ports:
  - name: metrics
    port: 6060
    targetPort: metrics
  selector:
    app.kubernetes.io/name: crowdsec
    app.kubernetes.io/component: agent
