apps/base/infra-crowdsec/deploy/agent/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-crowdsec-agent
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: crowdsec
      app.kubernetes.io/component: agent

  ingress:
    - ports:
        - port: metrics
      from:
        # Allow from prometheus
        - namespaceSelector:
            matchLabels:
              name: monitoring-prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/component: prometheus
              app.kubernetes.io/instance: k8s
              app.kubernetes.io/name: prometheus
